# CnC_Generals_Zero_Hour

./: .gitignore  README.md  stlport.diff
Generals/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
Generals/Code/: RTS.dsp  RTS.dsw
Generals/Code/GameEngine/: GameEngine.dsp
Generals/Code/GameEngine/Include/Common/: ActionManager.h  ArchiveFile.h  ArchiveFileSystem.h  AsciiString.h  AudioAffect.h  AudioEventInfo.h  AudioEventRTS.h  AudioHandleSpecialValues.h  AudioRandomValue.h  AudioRequest.h  AudioSettings.h  BattleHonors.h  BezFwdIterator.h  BezierSegment.h  BitFlags.h  BitFlagsIO.h  BorderColors.h  BuildAssistant.h  CDManager.h  CRCDebug.h  ClientUpdateModule.h  CommandLine.h  CopyProtection.h  CriticalSection.h  CustomMatchPreferences.h  DamageFX.h  DataChunk.h  Debug.h  Dict.h  Directory.h  DisabledTypes.h  DiscreteCircle.h  DrawModule.h  Energy.h  Errors.h  File.h  FileSystem.h  FunctionLexicon.h  GameAudio.h  GameCommon.h  (+95 more)
Generals/Code/GameEngine/Include/GameClient/: Anim2D.h  AnimateWindowManager.h  CDCheck.h  CampaignManager.h  ClientRandomValue.h  Color.h  CommandXlat.h  ControlBar.h  ControlBarResizer.h  ControlBarScheme.h  Credits.h  DebugDisplay.h  Diplomacy.h  DisconnectMenu.h  Display.h  DisplayString.h  DisplayStringManager.h  DrawGroupInfo.h  Drawable.h  DrawableInfo.h  DrawableManager.h  EstablishConnectionsMenu.h  Eva.h  ExtendedMessageBox.h  FXList.h  FontDesc.h  GUICallbacks.h  GUICommandTranslator.h  Gadget.h  GadgetCheckBox.h  GadgetComboBox.h  GadgetListBox.h  GadgetProgressBar.h  GadgetPushButton.h  GadgetRadioButton.h  GadgetSlider.h  (+51 more)
Generals/Code/GameEngineDevice/: GameEngineDevice.dsp
Generals/Code/Libraries/Source/: template.cpp  template.h
Generals/Code/Main/: RTS.RC  WinMain.cpp  WinMain.h  resource.h
Generals/Code/Tools/Autorun/: ARGS.CPP  ARGS.H  AUTORUN.RC  Autorun English.dsp  CDCNTRL.CPP  CDCNTRL.H  CallbackHook.h  DrawButton.cpp  DrawButton.h  EZGIMEX.cpp  GETCD.CPP  GameText.cpp  GameText.h  GetCD.h  IGR.cpp  IGR.h  JSUPPORT.H  Jsupport.cpp  Locale_API.cpp  Locale_API.h  POINT.h  RECT.h  TTFont.cpp  TTFont.h  Utils.cpp  Utils.h  ViewHTML.cpp  ViewHTML.h  WSYS_File.cpp  WSYS_FileSystem.cpp  WSYS_FileSystem.h  WSYS_RAMFile.cpp  WSYS_RAMFile.h  WSYS_StdFile.cpp  WSYS_StdFile.h  WSYS_StdFileSystem.cpp  WSYS_StdFileSystem.h  WSYS_file.h  WinFix.CPP  WinFix.H  (+9 more)
Generals/Code/Tools/Babylon/: DlgProxy.cpp  DlgProxy.h  ExportDlg.cpp  ExportDlg.h  GenerateDlg.cpp  GenerateDlg.h  MatchDlg.cpp  MatchDlg.h  ProceedDlg.cpp  ProceedDlg.h  Report.cpp  Report.h  RetranslateDlg.cpp  RetranslateDlg.h  STRCHECK.PL  StdAfx.cpp  StdAfx.h  TransDB.cpp  TransDB.h  VIEWDBSII.cpp  VIEWDBSII.h  VerifyDlg.cpp  VerifyDlg.h  VerifyTextDlg.cpp  VerifyTextDlg.h  ViewDBsDlg.cpp  XLStuff.cpp  XLStuff.h  bin.cpp  bin.h  excel8.cpp  excel8.h  expimp.cpp  expimp.h  fileops.cpp  fileops.h  iff.cpp  iff.h  list.cpp  list.h  (+16 more)
Generals/Code/Tools/CRCDiff/: CRCDiff.cpp  CRCDiff.dsp  KVPair.cpp  KVPair.h  debug.cpp  debug.h  expander.cpp  expander.h  misc.h  style.css
Generals/Code/Tools/Compress/: Compress.cpp  Compress.dsp
Generals/Code/Tools/DebugWindow/: DebugWindow.cpp  DebugWindow.def  DebugWindow.dsp  DebugWindow.h  DebugWindow.rc  DebugWindowDialog.cpp  DebugWindowDialog.h  DebugWindowExport.h  Resource.h  StdAfx.cpp  StdAfx.h
Generals/Code/Tools/GUIEdit/: GUIEdit.dsp
Generals/Code/Tools/ImagePacker/: ImagePacker.dsp
Generals/Code/Tools/Launcher/: BFISH.CPP  BFISH.H  Protect.cpp  Protect.h  configfile.cpp  configfile.h  dialog.cpp  dialog.h  dictionary.h  filed.h  findpatch.cpp  findpatch.h  launcher.dsp  launcher1.rc  loadbmp.cpp  loadbmp.h  main.cpp  monod.cpp  monod.h  odevice.h  patch.cpp  patch.h  process.cpp  process.h  resource.h  streamer.cpp  streamer.h  wdebug.cpp  wdebug.h  winblows.cpp  wstring.cpp  wstring.h  wstypes.h
Generals/Code/Tools/MapCacheBuilder/: MapCacheBuilder.dsp
Generals/Code/Tools/PATCHGET/: CHATAPI.CPP  CHATAPI.H  COMINIT.CPP  COMINIT.H  DownloadManager.cpp  DownloadManager.h  PROCESS.CPP  PROCESS.H  RESOURCE.H  Registry.h  SCRIPT1.RC  WINBLOWS.H  WSTYPES.H  debug.cpp  debug.h  patchgrabber.dsp  registry.cpp
Generals/Code/Tools/ParticleEditor/: CButtonShowColor.cpp  CButtonShowColor.h  CColorAlphaDialog.cpp  CColorAlphaDialog.h  CParticleEditorPage.h  CSwitchesDialog.cpp  CSwitchesDialog.h  EmissionTypePanels.cpp  EmissionTypePanels.h  ISwapablePanel.h  MoreParmsDialog.cpp  MoreParmsDialog.h  ParticleEditor.cpp  ParticleEditor.def  ParticleEditor.dsp  ParticleEditor.dsw  ParticleEditor.h  ParticleEditor.rc  ParticleEditorDialog.cpp  ParticleEditorDialog.h  ParticleEditorExport.h  ParticleTypePanels.cpp  ParticleTypePanels.h  Resource.h  ShaderTypePanels.cpp  ShaderTypePanels.h  StdAfx.h  VelocityTypePanels.cpp  VelocityTypePanels.h  post-build-Release.bat  post-build.bat
Generals/Code/Tools/WorldBuilder/: WorldBuilder.dsp
Generals/Code/Tools/buildVersionUpdate/: buildVersionUpdate.cpp  buildVersionUpdate.dsp
Generals/Code/Tools/mangler/: crc.cpp  crc.h  endian.h  mangler.cpp  mangler.dsp  mangler.h  manglertest.cpp  manglertest.dsp
Generals/Code/Tools/matchbot/: debug.cpp  debug.h  encrypt.cpp  encrypt.h  generals.cpp  generals.h  global.cpp  global.h  main.cpp  matcher.cpp  matcher.h  mydebug.cpp  mydebug.h  rand.cpp  rand.h
Generals/Code/Tools/textureCompress/: resource.h  textureCompress.cpp  textureCompress.dsp  textureCompress.dsw
Generals/Code/Tools/timingTest/: StdAfx.cpp  StdAfx.h  timingTest.cpp  timingTest.dsp
Generals/Code/Tools/versionUpdate/: versionUpdate.cpp  versionUpdate.dsp
Generals/Code/Tools/wolSetup/: StdAfx.cpp  StdAfx.h  resource.h  verchk.cpp  verchk.h  wolInit.cpp  wolSetup.cpp  wolSetup.dsp  wolSetup.dsw  wolSetup.h  wolSetup.rc
Generals/generals-sys/: Cargo.toml  build.rs
Generals/include/: Hybrid.h  MockWindows.h  game_spy.h  osdep.h
Generals/src/: Hybrid.cpp  main.rs
crates/: Cargo.toml
crates/generals/: Cargo.toml  build.rs
crates/generals/src/: main.rs
crates/mock-windows/: Cargo.toml
crates/mock-windows/src/: handle.rs  lib.rs  registry.rs  util.rs
(+5135 files in other folders)
